--- a/package.json
+++ b/package.json
@@ -19,8 +19,19 @@
     "react-dom": "^15.1.0",
     "react-flexbox-grid": "^0.9.6",
     "react-google-maps": "^4.10.1",
+    "react-hot-loader": "^3.0.0-beta.2",
     "react-mounter": "^1.2.0",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators": "^6.6.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-decorators-legacy": "^1.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "react-hot-loader": "^3.0.0-alpha.12",
+    "ws": "^1.0.1"
   }
 }
