--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "ag-grid": "^4.2.7",
+    "ag-grid-react": "^4.2.0",
     "babel-polyfill": "^6.9.0",
     "classnames": "^2.2.5",
     "flexboxgrid": "^6.3.0",
@@ -18,10 +20,10 @@
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-flexbox-grid": "^0.9.6",
-    "react-google-maps": "^4.10.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-mounter": "^1.2.0",
     "react-router": "^2.4.1",
+    "react-router-bootstrap": "^0.23.0",
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
