--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formsy-react": "^0.18.0",
     "material-ui": "^0.15.0",
     "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.13.0",
     "qrcode": "^0.4.2",
     "qrcode.react": "^0.6.1",
     "react": "^15.1.0",
@@ -27,7 +28,8 @@
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.0",
     "react-tap-event-plugin": "^1.0.0",
-    "tcomb-form": "^0.9.7"
+    "tcomb-form": "^0.9.7",
+    "tether": "^1.3.2"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators": "^6.6.5",
