--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "ag-grid-react": "^4.2.0",
     "babel-polyfill": "^6.9.0",
     "classnames": "^2.2.5",
-    "flexboxgrid": "^6.3.0",
-    "formsy-material-ui": "^0.4.3",
-    "formsy-react": "^0.18.0",
-    "material-ui": "^0.15.0",
+    "fixed-data-table": "^0.6.1",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.13.0",
-    "qrcode": "^0.4.2",
     "qrcode.react": "^0.6.1",
     "react": "^15.1.0",
     "react-addons-pure-render-mixin": "^15.1.0",
@@ -28,8 +24,7 @@
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.0",
     "react-tap-event-plugin": "^1.0.0",
-    "tcomb-form": "^0.9.7",
-    "tether": "^1.3.2"
+    "tcomb-form": "^0.9.7"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators": "^6.6.5",
