Lots of UI components

--- a/.eslintrc
+++ b/.eslintrc
@@ -148,7 +148,7 @@
       "newIsCap": true,
         "capIsNewExceptions": [
             "Match", "Any", "Object", "ObjectIncluding", "OneOf", "Optional", "Maybe", "Where", "DataTable", "ES", "FS", "Cloudinary"
-        ]      
+        ]
     }],
     "no-multiple-empty-lines": [2, { // http://eslint.org/docs/rules/no-multiple-empty-lines
       "max": 2
@@ -162,7 +162,7 @@
     "no-underscore-dangle": 0,       // http://eslint.org/docs/rules/no-underscore-dangle
     "one-var": [2, "never"],         // http://eslint.org/docs/rules/one-var
     "padded-blocks": [2, "never"],   // http://eslint.org/docs/rules/padded-blocks
-    "semi": [2, "always"],           // http://eslint.org/docs/rules/semi
+    # "semi": [2, "always"],           // http://eslint.org/docs/rules/semi
     "semi-spacing": [2, {            // http://eslint.org/docs/rules/semi-spacing
       "before": false,
       "after": true
