--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "ag-grid": "^4.2.7",
-    "ag-grid-react": "^4.2.0",
+    "ag-grid": "^5.0.1",
+    "ag-grid-react": "^5.0.0",
     "babel-polyfill": "^6.9.0",
+    "bootstrap-sass": "^3.3.6",
+    "chance": "^1.0.4",
     "classnames": "^2.2.5",
     "fixed-data-table": "^0.6.1",
+    "griddle-react": "^0.6.1",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.13.0",
     "qrcode.react": "^0.6.1",
-    "react": "^15.1.0",
+    "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.1.0",
     "react-flexbox-grid": "^0.9.6",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-mounter": "^1.2.0",
+    "react-komposer": "^1.13.1",
     "react-notification-system": "^0.2.7",
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.0",
